# source_generator

./: .gitignore  Cargo.toml  README.md
data/schema/: entity_interface.json
examples/: generate_vhdl_adder.rs
examples/vhdl/: adder.rs
src/: comment.rs  element.rs  lib.rs  source_file.rs  util.rs  vhdl.rs
src/comment/: multi_line_comment.rs  single_line_comment.rs
src/vhdl/: architecture.rs  binding.rs  block_declarative_item.rs  block_declarative_list.rs  concurrent_statement.rs  constant_declaration.rs  design_unit.rs  direction.rs  entity.rs  entity_interface.rs  entity_interface_binding.rs  entity_interface_binding_list.rs  entity_interface_description.rs  generic.rs  generic_binding.rs  generic_list.rs  instance.rs  keywords.rs  known_libraries.rs  library.rs  library_list.rs  library_use.rs  match_index.rs  operators.rs  port.rs  port_binding.rs  port_list.rs  process.rs  process_declarative_item.rs  sensitivity_list.rs  signal_assignment.rs  signal_declaration.rs  single_line_comment.rs  variable_declaration.rs  vhdl_error.rs  vhdl_file.rs
tests/: interface.json  main.rs  utility.rs
tests/vhdl/: .gitignore  avalon_mm.json  clk_rst.json  connect_clk_rst.rs  connect_instances.rs  connect_instances_and_ports.rs  connect_ports.rs  expected_connect_clk_rst.vhd  expected_connect_instances.vhd  expected_connect_instances_and_ports.vhd  expected_connect_ports.vhd  interface.json  mod.rs
