[package]
name = "source_generator"
version = "0.0.1"
authors = ["Johannes Kutning"]
edition = "2021"
license = "GPL-3.0"
description = "Basic source code generation features"
readme = "README.md"
repository = "https://github.com/JohannesKutning/source_generator"

[dependencies]
chrono = "0.4"
itertools = "0.8"
linked_hash_set = "0.1.4"

[[example]]
name = "generate_vhdl_adder"
test = true

