[package]
name = "source_generator"
version = "0.0.3"
authors = ["Johannes Kutning"]
edition = "2021"
license = "GPL-3.0"
description = "Basic source code generation features"
readme = "README.md"
repository = "https://github.com/JohannesKutning/source_generator"

[dependencies]
chrono = "0.4"
itertools = "0.8"
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-json-schema = "0.1.0"

[[example]]
name = "adder"
path = "examples/vhdl/adder.rs"
test = true

